feat: configure Maven Central publishing setup
- Added Maven Central publishing configuration with artifact signing support
- Created .env.example template for publishing credentials and signing keys
- Updated .gitignore to exclude .env files while keeping example template
- Added Maven publication details including POM metadata, licenses, and developer info
- Configured Javadoc and source JAR generation for release requirements
- Added task to create distribution bundle for Central Portal upload